# bang2

./: Cargo.toml  LICENSE  README.md  a.bang  test.bang
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
benches/: arithmetic.rs  bang_benchmark.rs  benchmarks.js  benchmarks.py  benchmarks.rs  equality.rs  fibonacci.rs  results.md
benchmarks/: fibonacci.bang
cli/: Cargo.toml
cli/src/: helpers.rs  lib.rs  main.rs  print_diagnostic.rs
cli/src/print/: ast.rs  chunk.rs  diagnostics.rs  mod.rs  tokens.rs
examples/: arithmeticBench.bang  bubbleSort.bang  iterativeFibonacci.bang  recursiveFibonacci.bang  syntax.bang
interpreter/: Cargo.toml
interpreter/benches/: benchmarks.js  benchmarks.rs
interpreter/src/: builtins.rs  chunk.rs  compiler.rs  context.rs  lib.rs  value.rs  vm.rs
interpreter/src/chunk/: display.rs  verifier.rs
interpreter/src/value/: bit32.rs  bit64.rs  functions.rs  indexing.rs  mod.rs  objects.rs  test.rs
interpreter/tests/: bang_test.rs  builtins.rs  closures.rs  comparisons.rs  functions.rs  indexing.rs  local_variables.rs  numeric_operators.rs
language/: Cargo.toml
language/benches/: benchmarks.rs
language/src/: ast.rs  builtins.rs  chunk.rs  compiler.rs  diagnostic.rs  formatter.rs  lib.rs  linter.rs  parser.rs  print.rs  tokens.rs  typechecker.rs  value.rs  vm.rs
language/tests/: bang_test.rs  builtins.rs  comparisons.rs  formatter.rs  functions.rs  if_statement.rs  indexing.rs  linter.rs  logical_operators.rs  typechecker.rs  while_loop.rs
src/: ast.rs  builtin.rs  builtins.rs  chunk.rs  cmp.rs  compiler.rs  error.rs  formatter.rs  lib.rs  linter.rs  main.rs  parser.rs  print.rs  scanner.rs  token.rs  tokens.rs  typechecker.rs  value.rs  vm.rs
src/linter/: mod.rs  no_constant_condition.rs  no_negative_zero.rs  no_self_assign.rs  no_unreachable.rs  no_yoda_equality_check.rs  rule.rs
src/print/: ast.rs  chunk.rs  errors.rs  mod.rs  tokens.rs
std/: Cargo.toml
std/src/: bytecode.rs  lib.rs  macros.rs  modules.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  lib.rs  parser.rs  tokens.rs
syntax/src/ast/: expression.rs  statement.rs  types.rs
tests/: bang_test.rs  builtins.rs  comments.rs  comparisons.rs  comparisons.test.bang  examples.rs  formatter.rs  functions.rs  if_statement.rs  if_statement.test.bang  language_tests.rs  linter.rs  local_variables.rs  local_variables.test.bang  logical_operators.test.bang  numeric_operators.rs  numeric_operators.test.bang  typechecker.rs  while_loop.rs  while_loop.test.bang
tools/: Cargo.toml
tools/src/: builtins.rs  formatter.rs  lib.rs  linter.rs  typechecker.rs
tools/src/linter/: constant_condition.rs  side_effects.rs  unused_variables.rs  visitor.rs
tools/src/typechecker/: builtins.rs  expressions.rs  narrowing.rs  statements.rs  types.rs
tools/tests/: formatter.rs  linter.rs  typechecker.rs
