[package]
name = "bang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
rustyline = "9.0.0"

[features]
debug-token = []
debug-ast = []
debug-bytecode = []
debug-stack = []
debug = ["debug-token", "debug-ast", "debug-bytecode", "debug-stack"]
