[workspace]
members = [
  "cli",
  "interpreter",
  "std",
  "syntax",
  "tools",
]

[workspace.package]
version = "0.1.0"
authors = ["Ben Brown"]
license = "MIT"
repository = "https://github.com/brownben/bang2"
readme = "../README.md"
categories = ["compilers"]
keywords = ["interpreter", "language"]
edition = "2021"

[profile.release]
strip = true
lto = true
panic = "abort"
