[package]
name = "bang"
description = "CLI for the Bang language"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
bang-interpreter = { path = "../interpreter" }
bang-std = { path = "../std" }
bang-syntax = { path = "../syntax" }
bang-tools = { path = "../tools" }
clap = "4"
rustyline = "10"
