[package]
name = "bang-interpreter"
description = "Bytecode interpreter for the Bang language"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[features]
debug = []

[dependencies]
ahash = "0.7.6"
bang-syntax = { path = "../syntax" }
smallvec = { version="1", features=["union"] }
smartstring = "1"

[dev-dependencies]
bang-std = { path = "../std" }
