[package]
name = "bang-interpreter"
description = "Bytecode interpreter for the Bang language"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[features]
debug = []

[dependencies]
bang-syntax = { path = "../syntax" }
itertools = "0.10.5"
rustc-hash = "1.1.0"
smallvec = { version="1", features=["union"] }
smartstring = "1"

[dev-dependencies]
bang-std = { path = "../std" }
