[package]
name = "bang-std"
description = "Standard library for the Bang language"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[features]
default = ["fs"]
fs = []

[dependencies]
bang-interpreter = { path = "../interpreter" }
