[package]
name = "bang-tools"
description = "Linter, formatter and typechecker for the Bang language"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
bang-syntax = { path = "../syntax" }
ahash = "0.7.6"
